--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -10,8 +10,8 @@ on:
   pull_request:
     branches: [ main ]
   schedule:
-    # 每 1 小时运行一次
-    - cron: "0 * * * *"
+    # 每 2 小时运行一次
+    - cron: '0 */2 * * *'
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -30,7 +30,7 @@ jobs:
         uses: actions/checkout@v3
 
       - name: Setup Node.js environment
-        uses: actions/setup-node@v2.1.5
+        uses: actions/setup-node@v3
         with:
           node-version: 16.x # optional
 
