--- a/.github/workflows/rss.yml
+++ b/.github/workflows/rss.yml
@@ -38,12 +38,12 @@ jobs:
       - name: Install & Commit
         run: |
           export TZ='Asia/Shanghai'
-          git config --global user.email "icolabot@e.yfun.top"
-          git config --global user.name "iColaBot"
+          git config --global user.email "1129159201@qq.com"
+          git config --global user.name "rcy1314"
           npm i --save
           node index.js
           cd src/
-          echo "rss.yfun.top" > CNAME
+          echo "rcy1314.github.io/rss-list" > CNAME
           #git init
           #git add -A
           #git commit -m "Update RSS"
