--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,3 +44,6 @@ jobs:
       - name: Push
         run: |
           git push origin main
+        with:
+          github_token: ${{ secrets.TOKEN }}
+          publish_dir: ./src
